adjust container width

--- a/style.css
+++ b/style.css
@@ -54,7 +54,8 @@ body * {
 /* BOX WITH PICTURE AND TEXT */
 
 #container {
-    width: 360px;
+    width: 100%;
+    max-width: 588px;
     margin: 56px auto 0px;
     padding: 0 24px
 }
