added viewport height to the body

--- a/style.css
+++ b/style.css
@@ -38,10 +38,11 @@
     --switch-bg: url(./assets/sun.svg);
 }
 
-/* ADDING A PICTURE TO THE BACKGROUND */
+/* ADDING A PICTURE TO THE BACKGROUND AND VIEWPORT HEIGHT */
 
 body {
-    background: var(--bg-url) no-repeat top center/cover
+    background: var(--bg-url) no-repeat top center/cover;
+    height: 100vh;
 }
 
 /* APPLYING THE FONT TO THE WHOLE BODY */
@@ -197,7 +198,7 @@ footer {
     font-size: 14px;
 }
 
-/* @RULE TO CHANGE THE SIZE OF PICTUREA */
+/* @RULE TO CHANGE THE SIZE OF BACKGROUNDS IN DIFFERENT DEVICES */
 @media (min-width: 700px) {
     :root {
         --bg-url: url(./assets/bg-desktop.jpg)
